[package]
name = "tokio-util"
# When releasing to crates.io:
# - Remove path dependencies
# - Update CHANGELOG.md.
# - Create "tokio-util-0.7.x" git tag.
authors = ["Tokio Contributors <team@tokio.rs>"]
categories = ["asynchronous"]
description = """
Additional utilities for working with Tokio.
"""
edition = "2018"
homepage = "https://tokio.rs"
license = "MIT"
repository = "https://github.com/tokio-rs/tokio"
rust-version = "1.49"
version = "0.7.3"

[features]
# No features on by default
default = []

# Shorthand for enabling everything
full = ["codec", "compat", "io-util", "time", "net", "rt"]

codec = ["tracing"]
compat = ["futures-io"]
io = []
io-util = ["io", "tokio/rt", "tokio/io-util"]
net = ["tokio/net"]
rt = ["tokio/rt", "tokio/sync", "futures-util", "hashbrown"]
time = ["tokio/time", "slab"]

__docs_rs = ["futures-util"]

[dependencies]
bytes = "1.0.0"
futures-core = "0.3.0"
futures-io = {version = "0.3.0", optional = true}
futures-sink = "0.3.0"
futures-util = {version = "0.3.0", optional = true}
pin-project-lite = "0.2.0"
slab = {version = "0.4.4", optional = true}# Backs `DelayQueue`
tokio = {version = "1.19.0", path = "../tokio", features = ["sync"]}
tracing = {version = "0.1.25", default-features = false, features = ["std"], optional = true}

[target.'cfg(tokio_unstable)'.dependencies]
hashbrown = {version = "0.12.0", optional = true}

[dev-dependencies]
tokio = {version = "1.0.0", path = "../tokio", features = ["full"]}
tokio-stream = {version = "0.1", path = "../tokio-stream"}
tokio-test = {version = "0.4.0", path = "../tokio-test"}

async-stream = "0.3.0"
futures = "0.3.0"
futures-test = "0.3.5"
parking_lot = "0.12.0"

[package.metadata.docs.rs]
all-features = true
# enable unstable features in the documentation
rustdoc-args = ["--cfg", "docsrs", "--cfg", "tokio_unstable"]
# it's necessary to _also_ pass `--cfg tokio_unstable` to rustc, or else
# dependencies will not be enabled, and the docs build will fail.
rustc-args = ["--cfg", "docsrs", "--cfg", "tokio_unstable"]
